--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "bun test"
   },
   "dependencies": {
-    "openai": "^6.15.0"
+    "openai": "^6.15.0",
+    "puppeteer-core": "^24.34.0"
   },
   "devDependencies": {
     "fast-check": "^4.5.3"
