模块支持配置

--- a/config/app.json
+++ b/config/app.json
@@ -16,5 +16,9 @@
     "criticalThreshold": 0.9,
     "hardLimitThreshold": 0.95
   },
-  "modules": ["chrome"]
+  "modules": {
+    "chrome": {
+      "headless": true
+    }
+  }
 }
