--- a/config/app.json
+++ b/config/app.json
@@ -5,6 +5,7 @@
   "loggingConfigPath": "config/logging.json",
   "maxSteps": 200,
   "maxToolRounds": 200,
+  "httpPort": 3001,
   "llm": {
     "baseURL": "http://127.0.0.1:1234/v1",
     "model": "zai-org/glm-4.6v-flash",
