并发请求大模型支持

--- a/config/app.json
+++ b/config/app.json
@@ -9,7 +9,8 @@
   "llm": {
     "baseURL": "http://127.0.0.1:1234/v1",
     "model": "zai-org/glm-4.6v-flash",
-    "apiKey": "NOT_NEEDED"
+    "apiKey": "NOT_NEEDED",
+    "maxConcurrentRequests": 3
   },
   "contextLimit": {
     "maxTokens": 12000,
