--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "bun run start.js",
     "demo": "bun run test/demo.js",
-    "test": "bun test"
+    "test": "bun test",
+    "test:coverage": "bun test --coverage",
+    "test:coverage:check": "bun test --coverage --coverage-reporter=lcov && bun run scripts/check-coverage.js"
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.88",
