chrome支持设置代理

--- a/config/app.json
+++ b/config/app.json
@@ -21,7 +21,12 @@
   },
   "modules": {
     "chrome": {
-      "headless": true
+      "headless": true,
+      "proxy": {
+        "server": "",
+        "username": "",
+        "password": ""
+      }
     }
   }
 }
