--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@napi-rs/canvas": "^0.1.88",
     "file-type": "^21.3.0",
     "openai": "^6.15.0",
-    "puppeteer-core": "^24.34.0"
+    "puppeteer-core": "^24.34.0",
+    "ssh2": "^1.17.0"
   },
   "devDependencies": {
     "fast-check": "^4.5.3"
