--- a/web/v3/package.json
+++ b/web/v3/package.json
@@ -12,14 +12,22 @@
     "@primevue/themes": "^4.5.4",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
+    "dompurify": "^3.3.1",
     "lucide-vue-next": "^0.563.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-github": "^0.5.0",
     "pinia": "^3.0.4",
     "primevue": "^4.5.4",
+    "prismjs": "^1.30.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.10.1",
+    "@types/prismjs": "^1.26.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
