fix(ssh): 防止活跃连接被空闲清理机制断开
增加 updateLastUsed 方法，在 shell 输出数据时更新连接的最后使用时间
将默认空闲超时从 5 分钟延长至 2 小时，保活间隔从 10 秒调整为 30 秒

--- a/modules/ssh/config.template.json
+++ b/modules/ssh/config.template.json
@@ -2,10 +2,10 @@
   "maxConnections": 10,
   "connectionTimeout": 30000,
   "commandTimeout": 30000,
-  "idleTimeout": 300000,
+  "idleTimeout": 7200000,
   "maxOutputSize": 10485760,
   "verifyHostKey": false,
-  "keepaliveInterval": 10000,
+  "keepaliveInterval": 30000,
   "hosts": {
     "production-server": {
       "description": "生产服务器",
