feat(automation): 新增自动化控制模块，支持鼠标键盘控制和屏幕交互
新增 automation 模块，为智能体提供鼠标键盘控制和无障碍接口交互能力。包含以下主要功能：
- 鼠标控制：移动、点击、拖拽、滚轮操作
- 键盘控制：按键、组合键、文本输入
- 屏幕操作：截图、获取屏幕尺寸
- 无障碍接口：查找控件、获取控件树、控件交互
- 权限控制：可配置允许的操作类型和受限区域
- 管理界面：提供 Web 面板用于配置和监控

同时更新了相关配置文件和文档，并在 .gitignore 中添加了相关忽略项。

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,5 @@ agent-society-data/
 config/llmservices.json
 config/llmservices.local.json
 config/localfile.local.json
+agent-society-data-3001/
+config/automation.local.json
