fix(ssh): 增加SSH连接保活失败最大次数以修复连接断开问题
将 keepaliveCountMax 默认值从 3 增加到 20，使总保活超时时间从约 90 秒延长至约 10 分钟。
这可以避免因短暂网络抖动导致 SSH 连接被意外断开，解决了长期使用后连接断开的问题。

--- a/modules/ssh/config.template.json
+++ b/modules/ssh/config.template.json
@@ -6,6 +6,7 @@
   "maxOutputSize": 10485760,
   "verifyHostKey": false,
   "keepaliveInterval": 30000,
+  "keepaliveCountMax": 20,
   "hosts": {
     "production-server": {
       "description": "生产服务器",
